<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alterNickname"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popwindowbg"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="@dimen/alterNicknameW"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/alter_nickname_shpae"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/alterNicknameBtPtb"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="@dimen/alterNicknameFontS" />

        <EditText
            android:id="@+id/nicknameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="@dimen/alterNicknameBtPtb"
            android:text="@string/nickname"
            android:textSize="@dimen/alterNicknameFontS" />

        <!--按钮组-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alter_nickname_bt_group_shape"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!--取消-->
            <TextView
                android:id="@+id/cancel"
                style="@style/alterNickname"
                android:text="@string/cancel" />

            <!--确定-->
            <TextView
                android:id="@+id/asure"
                style="@style/alterNickname"
                android:text="@string/asure" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
